Ajuste de varios sectores

--- a/index.html
+++ b/index.html
@@ -5,9 +5,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Rettiwt</title>
+    <title>Twitter Clone</title>
 </head>
 <body>
-    
+    <main>
+        <div class="main-container">
+        <section>
+            <div class="left-menu">
+                <div class="menu-container">
+                    <ul class="menu-list">
+                        <img src="imgs/twt-logo.png" id="logo">
+                        <li>Inicio</li>
+                        <li>Explorador</li>
+                        <li>Notificaciones</li>
+                        <li>Mensajes</li>
+                        <li>Guardados</li>
+                        <li>Twitter Blue</li>
+                        <li>Perfil</li>
+                        <li>Mas Opciones</li>
+                    </ul>
+                    <input class="tweet-btn big" type="button" value="Tweet">
+                </div>
+                <div class="account-selector">
+                    <img src="imgs/account-img.png" id="account-img">
+                    <p>Account Name</p>
+                    <p>Account Handle</p>
+                    <img src="" alt="options-icon">
+                </div>
+
+            </div>
+        </section>
+        <section>
+            <div class="main-content">
+                <div class="content-filter">
+                 <div class="home-top">Inicio</div>
+                 <div class="tabs">
+                  <div class="for-you tab">Para Ti</div>
+                  <div class="following tab">Siguiendo</div>
+                 </div>  
+            </div>
+              <div class="new-tweet-area">
+                <img src="imgs/account-img.png" id="account-img">
+                <input type="text">
+                <input class="tweet-btn smol" type="button" value="Tweet">
+              </div>
+              <div class="scroll-container"></div>  
+            </div>
+        </section>
+        <section>
+            <div class="right-menu">
+                <input class="search-area" type="text">
+                <div class="trends-container">
+                    <h2>Que Esta Pasando</h2>
+                    <div class="trend"></div>
+                    <div class="trend"></div>
+                    <div class="trend"></div>
+                    <div class="trend"></div>
+                </div>
+                <div class="might-know-container">
+                    <h2>A Quien Seguir</h2>
+                    <div class="related-users">User 1</div>
+                    <div class="related-users">User 2</div>
+                    <div class="related-users">User 3</div>
+                </div>
+                <div class="legal">
+                    <a href="" class="link-">Condiciones de Servicio</a>
+                    <a href="" class="link-">Politica de Privacidad</a>
+                    <a href="" class="link-">Politica de Cookies</a>
+                    <a href="" class="link-">Accesibilidad</a>
+                    <a href="" class="link-">Informacion de Anuncios</a>
+                    <a href="" class="link-">Mas Opciones</a>
+                </div>
+                <p class="copy">© 2023 Twitter, Inc.</p>
+            </div>
+        </section>
+    </div>
+    </main>
 </body>
 </html>
