Mejores al menu izquierdo

--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
                 <div class="menu-container">
                     <ul class="menu-list">
                         <img src="imgs/twt-logo.png" id="logo">
-                        <li>Inicio</li>
-                        <li>Explorador</li>
-                        <li>Notificaciones</li>
-                        <li>Mensajes</li>
-                        <li>Guardados</li>
-                        <li>Twitter Blue</li>
-                        <li>Perfil</li>
-                        <li>Mas Opciones</li>
+                        <li><img class="icon-menu" src="imgs/home.png" alt="icono de inicio">Inicio</li>
+                        <li><img class="icon-menu" src="imgs/hashtag.png" alt="icono de hastag">Explorador</li>
+                        <li><img class="icon-menu" src="imgs/notif.png" alt="icono de notificaciones">Notificaciones</li>
+                        <li><img class="icon-menu" src="imgs/mail.png" alt="icono de mensajes">Mensajes</li>
+                        <li><img class="icon-menu" src="imgs/bookmark.png" alt="icono de bookmark">Guardados</li>
+                        <li><img class="icon-menu" src="imgs/twt-logo.png" alt="icono de twitter">Twitter Blue</li>
+                        <li><img class="icon-menu" src="imgs/user.png" alt="icono de usuario">Perfil</li>
+                        <li><img class="icon-menu" src="imgs/dotscircle.png" alt="icono de opciones">Mas Opciones</li>
                     </ul>
                     <input class="tweet-btn big" type="button" value="Tweet">
                 </div>
                 <div class="account-selector">
                     <img src="imgs/account-img.png" id="account-img">
-                    <p>Account Name</p>
-                    <p>Account Handle</p>
-                    <img src="" alt="options-icon">
+                   <div class="account-info">
+                    <p id="account-name">AccountName</p>
+                    <p id="account-handle">@accountHandle</p>
+                  </div>
+                    <img class="icon-menu-account" src="imgs/dots.png" alt="options-icon">
                 </div>
 
             </div>
@@ -40,7 +42,7 @@
                 <div class="content-filter">
                  <div class="home-top">Inicio</div>
                  <div class="tabs">
-                  <div class="for-you tab">Para Ti</div>
+                  <div class="for-you tab">Para ti</div>
                   <div class="following tab">Siguiendo</div>
                  </div>  
             </div>
