Reestructuracion del layout

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <section>
             <div class="left-menu">
                 <div class="menu-container">
-                    <ul class="menu-list">
-                        <img src="imgs/twt-logo.png" id="logo">
-                        <li><img class="icon-menu" src="imgs/home.png" alt="icono de inicio">Inicio</li>
-                        <li><img class="icon-menu" src="imgs/hashtag.png" alt="icono de hastag">Explorador</li>
-                        <li><img class="icon-menu" src="imgs/notif.png" alt="icono de notificaciones">Notificaciones</li>
-                        <li><img class="icon-menu" src="imgs/mail.png" alt="icono de mensajes">Mensajes</li>
-                        <li><img class="icon-menu" src="imgs/bookmark.png" alt="icono de bookmark">Guardados</li>
-                        <li><img class="icon-menu" src="imgs/twt-logo.png" alt="icono de twitter">Twitter Blue</li>
-                        <li><img class="icon-menu" src="imgs/user.png" alt="icono de usuario">Perfil</li>
-                        <li><img class="icon-menu" src="imgs/dotscircle.png" alt="icono de opciones">Mas Opciones</li>
-                    </ul>
+                    <div class="menu-list">
+                        <img src="imgs/brand.svg" id="logo">
+                        <div class="list-option"><img class="icon-menu" src="imgs/home.png" alt="icono de inicio">Inicio</div>
+                        <div class="list-option"><img class="icon-menu" src="imgs/hashtag.png" alt="icono de hastag">Explorador</div>
+                        <div class="list-option"><img class="icon-menu" src="imgs/notif.png" alt="icono de notificaciones">Notificaciones</div>
+                        <div class="list-option"><img class="icon-menu" src="imgs/mail.png" alt="icono de mensajes">Mensajes</div>
+                        <div class="list-option"><img class="icon-menu" src="imgs/bookmark.png" alt="icono de bookmark">Guardados</div>
+                        <div class="list-option"><img class="icon-menu" src="imgs/twt-logo.png" alt="icono de twitter">Twitter Blue</div>
+                        <div class="list-option"><img class="icon-menu" src="imgs/user.png" alt="icono de usuario">Perfil</div>
+                        <div class="list-option"><img class="icon-menu" src="imgs/dotscircle.png" alt="icono de opciones">Mas Opciones</div>
+                    </div>
                     <input class="tweet-btn big" type="button" value="Tweet">
                 </div>
                 <div class="account-selector">
