--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script defer src="main.js"></script>
     <title>Twitter Clone</title>
 </head>
 <body>
@@ -49,12 +50,11 @@
               <div class="new-tweet-area">
                 <img src="imgs/account-img.png" id="account-img">
                 <input type="text">
-                <input class="tweet-btn smol" type="button" value="Tweet">
-              </div>
-              <div class="scroll-container"></div>  
             </div>
-        </section>
-        <section>
+            <div class="scroll-container"></div>  
+        </div>
+    </section>
+    <section>
             <div class="right-menu">
                 <input class="search-area" type="text">
                 <div class="trends-container">
