Ajuste dle menu derecho y algunas detalles generales

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <input class="tweet-btn smol" type="button" value="Tweet">
                 </div>
             </div>
-            <div class="scroll-container"></div>  
+            <div class="scroll-container">  
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at lectus quam. Praesent diam eros, pharetra a nulla in, dapibus dictum tortor. Mauris non faucibus metus. Nam eu risus a orci varius laoreet. Nullam convallis dictum lacus. Cras leo nibh, imperdiet non metus eu, efficitur bibendum est. Ut tincidunt mattis varius. Aliquam ut velit a augue consequat mattis.
 
 Quisque sodales, sapien vitae facilisis hendrerit, est orci fermentum turpis, consectetur egestas diam enim a libero. Proin tristique tempus porttitor. Aenean iaculis, nisi facilisis hendrerit molestie, lacus sapien aliquet urna, a pretium neque metus et dui. Praesent a tempus nibh. Ut vitae lobortis mauris, ac eleifend nibh. Duis feugiat, ex id consectetur maximus, orci nisl mattis justo, volutpat pharetra ante purus ac tellus. Aliquam erat volutpat. Nullam sodales congue velit id molestie. Phasellus eget nisl tortor. In blandit nunc eu lacus pharetra, in condimentum felis rutrum. Vestibulum ut tellus eu magna porta hendrerit a at dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -65,22 +65,80 @@ Curabitur id leo maximus, hendrerit dolor id, feugiat augue. Pellentesque ut tur
 Sed ut nisl gravida, volutpat lectus eu, fringilla augue. Nam interdum quam a feugiat fermentum. Duis vitae laoreet sapien. Ut venenatis augue leo. Fusce iaculis faucibus varius. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dapibus dapibus aliquam. Fusce suscipit bibendum enim quis varius. Vivamus porta sodales imperdiet. Sed in justo eros. Donec sit amet ullamcorper eros. Integer non erat neque. Morbi commodo nisl neque, ut faucibus dui sodales vitae. Phasellus et tempor lacus.
 
 Sed rutrum, diam quis faucibus efficitur, libero ante euismod lorem, non auctor dui dolor quis quam. Cras a lobortis augue, at mollis justo. Aliquam blandit, mauris a laoreet pellentesque, risus velit fringilla leo, et lobortis nibh velit pretium magna. Phasellus eget enim vitae nisl commodo dapibus id nec turpis. Donec ac ligula non lorem scelerisque pellentesque quis non felis. Quisque ornare cursus velit, eu tempus diam consectetur id. Duis venenatis facilisis auctor. Nulla bibendum massa ut tortor cursus ultrices. Cras dapibus feugiat lectus, id rutrum odio fringilla ut. Mauris varius mauris vitae ligula feugiat sodales. Quisque faucibus enim ac consectetur iaculis.
-    </section>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at lectus quam. Praesent diam eros, pharetra a nulla in, dapibus dictum tortor. Mauris non faucibus metus. Nam eu risus a orci varius laoreet. Nullam convallis dictum lacus. Cras leo nibh, imperdiet non metus eu, efficitur bibendum est. Ut tincidunt mattis varius. Aliquam ut velit a augue consequat mattis.
+
+Quisque sodales, sapien vitae facilisis hendrerit, est orci fermentum turpis, consectetur egestas diam enim a libero. Proin tristique tempus porttitor. Aenean iaculis, nisi facilisis hendrerit molestie, lacus sapien aliquet urna, a pretium neque metus et dui. Praesent a tempus nibh. Ut vitae lobortis mauris, ac eleifend nibh. Duis feugiat, ex id consectetur maximus, orci nisl mattis justo, volutpat pharetra ante purus ac tellus. Aliquam erat volutpat. Nullam sodales congue velit id molestie. Phasellus eget nisl tortor. In blandit nunc eu lacus pharetra, in condimentum felis rutrum. Vestibulum ut tellus eu magna porta hendrerit a at dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+
+Curabitur id leo maximus, hendrerit dolor id, feugiat augue. Pellentesque ut turpis facilisis, malesuada nisl feugiat, fringilla nisl. Integer dui purus, iaculis sit amet finibus in, accumsan ac quam. Praesent ex diam, fringilla euismod metus lobortis, sagittis tincidunt dui. Suspendisse eget mi tristique, dictum nunc non, pretium massa. Donec vitae pulvinar ex, non gravida nunc. Vivamus rhoncus luctus libero, id dapibus diam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam et dictum urna.
+
+Sed ut nisl gravida, volutpat lectus eu, fringilla augue. Nam interdum quam a feugiat fermentum. Duis vitae laoreet sapien. Ut venenatis augue leo. Fusce iaculis faucibus varius. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dapibus dapibus aliquam. Fusce suscipit bibendum enim quis varius. Vivamus porta sodales imperdiet. Sed in justo eros. Donec sit amet ullamcorper eros. Integer non erat neque. Morbi commodo nisl neque, ut faucibus dui sodales vitae. Phasellus et tempor lacus.
+
+Sed rutrum, diam quis faucibus efficitur, libero ante euismod lorem, non auctor dui dolor quis quam. Cras a lobortis augue, at mollis justo. Aliquam blandit, mauris a laoreet pellentesque, risus velit fringilla leo, et lobortis nibh velit pretium magna. Phasellus eget enim vitae nisl commodo dapibus id nec turpis. Donec ac ligula non lorem scelerisque pellentesque quis non felis. Quisque ornare cursus velit, eu tempus diam consectetur id. Duis venenatis facilisis auctor. Nulla bibendum massa ut tortor cursus ultrices. Cras dapibus feugiat lectus, id rutrum odio fringilla ut. Mauris varius mauris vitae ligula feugiat sodales. Quisque faucibus enim ac consectetur iaculis.
+   
+</div>    
+</section>
     <section>
             <div class="right-menu">
+                <div class="search-bar-container">
                 <input class="search-area" type="text">
+                </div>
                 <div class="trends-container">
-                    <h2>Que Esta Pasando</h2>
-                    <div class="trend"></div>
-                    <div class="trend"></div>
-                    <div class="trend"></div>
-                    <div class="trend"></div>
+                    <h2 class="right-menu-section-title">Que Esta Pasando</h2>
+                    <div class="trend">
+                     <div class="category misc-info">Category</div>   
+                        Trend
+                        <div class="trend-numbers misc-info">Number of Tweets</div>
+                    </div>  
+                    <div class="trend">
+                        <div class="category misc-info">Category</div>  
+                        Trend
+                        <div class="trend-numbers misc-info">Number of Tweets</div>
+                    </div>  
+                    <div class="trend">
+                        <div class="category misc-info">Category</div>  
+                        Trend
+                        <div class="trend-numbers misc-info">Number of Tweets</div>
+                    </div>  
+                    <div class="trend">
+                        <div class="category misc-info">Category</div>  
+                        Trend
+                        <div class="trend-numbers misc-info">Number of Tweets</div>
+                    </div> 
+                    <a><div class="show-more">Show More..</div></a> 
                 </div>
                 <div class="might-know-container">
-                    <h2>A Quien Seguir</h2>
-                    <div class="related-users">User 1</div>
-                    <div class="related-users">User 2</div>
-                    <div class="related-users">User 3</div>
+                    <h2 class="right-menu-section-title">A Quien Seguir</h2>
+                    <div class="related-users">
+                        <div class="account-selector">
+                            <img src="imgs/account-img.png" id="account-img">
+                           <div class="account-info">
+                            <p id="account-name">AccountName</p>
+                            <p id="account-handle">@accountHandle</p>
+                          </div>
+                            <img class="icon-menu-account" src="imgs/dots.png" alt="options-icon">
+                        </div>
+                    </div>
+                    <div class="related-users">
+                        <div class="account-selector">
+                            <img src="imgs/account-img.png" id="account-img">
+                           <div class="account-info">
+                            <p id="account-name">AccountName</p>
+                            <p id="account-handle">@accountHandle</p>
+                          </div>
+                            <img class="icon-menu-account" src="imgs/dots.png" alt="options-icon">
+                        </div>
+                    </div>
+                    <div class="related-users">
+                        <div class="account-selector">
+                            <img src="imgs/account-img.png" id="account-img">
+                           <div class="account-info">
+                            <p id="account-name">AccountName</p>
+                            <p id="account-handle">@accountHandle</p>
+                          </div>
+                            <img class="icon-menu-account" src="imgs/dots.png" alt="options-icon">
+                        </div>        
+                    </div>
+                    <a><div class="show-more">Show More..</div></a> 
                 </div>
                 <div class="legal">
                     <a href="" class="link-">Condiciones de Servicio</a>
