--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             </div>
             <div class="scroll-container">  
           <div class="tweet-view">
-            <img src="imgs/account-img.png" id="account-img" class="span-2">
+            <img src="imgs/account-img.png" class="span-2">
             <p id="account-name">AccountName</p>
             <p id="account-handle" class="minor-text">@accountHandle</p>
             <p class="minor-text">Time</p>
             <img class="icon-menu-account" src="imgs/dots.png" alt="options-icon">
-            <p>This is the content of the tweet.</p>
+            <p class="tweet-content">This is the content of the tweet.This is the content of the tweet.</p>
           </div>
             </div>    
 </section>
